--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -107,36 +107,19 @@ jobs:
         path: |
              HDLBInst*.7z
              Translation-template.7z
-
-    - name: draft pre-release
-      if: | 
-         (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') &&
-         (!endsWith("${{steps.tag.outputs.version_tag}}",'-rel'))
+              
+    - name: Deploy tagged pre-release
+      if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
       uses: marvinpinto/action-automatic-releases@latest
       with:
+        prerelease: true
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        draft: true
         automatic_release_tag: "${{ steps.tag.outputs.version_tag }}"
         title: "${{ steps.version.outputs.string }}"
         files: |
               HDLBInst*.7z
               Translation-template.7z
               
-    - name: release
-      if: | 
-         (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main') &&
-         (endsWith("${{steps.tag.outputs.version_tag}}",'-rel'))
-      uses: marvinpinto/action-automatic-releases@latest
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        draft: false
-        automatic_release_tag: "${{ steps.tag.outputs.version_tag }}"
-        title: "${{ steps.version.outputs.string }}"
-        prerelease: false
-        files: |
-              HDLBInst*.7z
-              Translation-template.7z
-
     - name: Deploy pre-release
       if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
       uses: marvinpinto/action-automatic-releases@latest
@@ -174,23 +157,12 @@ jobs:
         name: HDL-INST
         
     - name: Discord Webhook, Latest release
-      if: |
-        github.event_name == 'push' && 
-        !endsWith(${{steps.tag.outputs.version_tag}},'-rel')
+      if: github.event_name == 'push'
       uses: tsickert/discord-webhook@v2.0.2
       with:
         webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
         content: "<@&859572447761793034> & <@&859615291477590046> , HDL Batch Installer has been updated some minutes ago\\n according to changelog: **[${{ steps.version.outputs.string }}]** \\n as always, you can download the latest version from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/Latest \\n or <#863913236457062421>"
- 
-    - name: Discord Webhook, Stable Release
-      if: |
-        github.event_name == 'push' &&
-        endsWith(${{steps.tag.outputs.version_tag}},'-rel')
-      uses: tsickert/discord-webhook@v2.0.2
-      with:
-        webhook-url: ${{ secrets.TESTERS_WEBHOOK }}
-        content: "@everyone, A new release of HDL Batch Installer has been uploaded some minutes ago\\n according to changelog: **[${{ steps.version.outputs.string }}]** \\n as always, download from here:\\n https://github.com/israpps/HDL-Batch-installer/releases/tag/${{ steps.tag.outputs.version_tag }} \\n or <#863913236457062421>"
-        
+
     - name: Discord Webhook, Latest release
       if: github.event_name == 'repository_dispatch'
       uses: tsickert/discord-webhook@v2.0.2
