make workflow use new script
Co-Authored-By: Haker120 <26009830+Haker120@users.noreply.github.com>

--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -55,16 +55,7 @@ jobs:
 
     - name: Compile translation catalogs
       run: |
-         cd translations
-         cd catalogs
-         msgfmt pt_BR.po -o pt_BR.mo
-         msgfmt es.po -o es.mo
-         msgfmt it_IT.po -o it_IT.mo
-         cd ..
-         cd ..
-         cp translations/catalogs/pt_BR.mo Release/Lang/pt_BR/HDLBinst.mo
-         cp translations/catalogs/es.mo Release/Lang/es/HDLBinst.mo
-         cp translations/catalogs/it_IT.mo Release/Lang/it/HDLBinst.mo
+        ./build_catalogs.sh
 
     - name: Create translation template package
       run: |
