add execution permission to script
Update Repack-and-release.yml

--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -5,7 +5,7 @@ on:
     paths:
       - 'Release**'
       - 'Release32**'
-      - 'translations/catalogs/*.po'
+      - 'translations/**'
   repository_dispatch:
     types: [HDL_Dump_Updated_]
 jobs:
@@ -32,7 +32,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        sudo apt-get install gettext p7zip
+        sudo apt-get install gettext p7zip git
 
 
     - name: get version from changelog
@@ -57,6 +57,7 @@ jobs:
       run: |
         cd translations
         cd catalogs
+        git update-index --chmod=+x ./build_catalogs.sh
         ./build_catalogs.sh
 
     - name: Create translation template package
