--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -49,9 +49,18 @@ jobs:
       run: |
         cd Release
         wget https://github.com/israpps/hdl-dump/releases/download/hdlinst/HDL.EXE -O $PWD/HDL.EXE
+
     - name: Bundle extra files before building packages
       run: |
         cp LICENSE Release/LICENSE.TXT
+
+    - name: Trim changes of latest version
+      run: |
+        cd Release
+        sed -n '/Change log/,/^$/{/^$/q; p}' changes.log >> ../latest_changes.log
+        cd ..
+        sed -i 's/^[[:blank:]]*//g' latest_changes.log
+        cat latest_changes.log
 
     - name: Compile translation catalogs
       run: |
