--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -73,6 +73,15 @@ jobs:
          mv translations HDLBinst-Translation-$DATEE
          7z a -t7z -r Translation-template.7z HDLBinst-Translation-*/*.pot
 
+    - name: convert \n to \r\n
+      run: |
+        sed -i 's/\n/\r\n/' changes.log
+        sed -i 's/\n/\r\n/' README.TXT
+        sed -i 's/\n/\r\n/' LICENSE.TXT
+        sed -i 's/\n/\r\n/' HDL-Batch-installer.BAT
+        cd Common
+        sed -i 's/\n/\r\n/' config.INI
+        
     - name: Repack latest x64 build
       run: |
         SCH=${GITHUB_SHA::7}
@@ -124,6 +133,7 @@ jobs:
         name: "${{ steps.version.outputs.string }}"
         tag_name: "Latest"
         body_path: 'latest_changes.log'
+        prerelease: false
 
 #    - name: Deploy pre-release (legacy)
 #      if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
