--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -83,6 +83,13 @@ jobs:
         cd Common
         unix2dos config.INI
         
+    - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+      with:
+        delete_release: true
+        tag_name: Latest
+      env:
+       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
     - name: Repack latest x64 build
       run: |
         SCH=${GITHUB_SHA::7}
