--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -83,7 +83,8 @@ jobs:
         cd Common
         unix2dos config.INI
         
-    - uses: dev-drprasad/delete-tag-and-release@v0.2.0
+    - name: delete previous tag/release
+      uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
         delete_release: true
         tag_name: Latest
