Avoid release deletion on non-main branch

--- a/.github/workflows/Repack-and-release.yml
+++ b/.github/workflows/Repack-and-release.yml
@@ -84,6 +84,7 @@ jobs:
         unix2dos config.INI
         
     - name: delete previous tag/release
+      if: (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
       uses: dev-drprasad/delete-tag-and-release@v0.2.0
       with:
         delete_release: true
