--- a/Release/Common/config.INI
+++ b/Release/Common/config.INI
@@ -1,7 +1,7 @@
 [Init]
 Debug_level=5
 Language=0
-check_for_updates=1
+check_for_updates=0
 [Game_search]
 Default_iso_path=C:\\
 [Installation]
@@ -14,3 +14,5 @@ inform_unknown_ID=0
 [FUSE]
 opl_partition=+OPL
 default_mountpoint=X
+[NBD]
+Default_IP=192.168.0.1
